--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -25,12 +25,18 @@ h2{
 }
 
 .card{
-    width: 325px;
+    width: 500px;
     background-color: #f0f0f0;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     margin: 20px;
+}
+
+.card-image {
+    width: 100%;
+    height: 300px; /* Adjust height as needed */
+    object-fit: cover; /* Ensures the image fits well without distortion */
 }
 
 .card:hover{
