--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,103 +1,79 @@
-
-
-.contact{
-    /*background: #08071d;*/
-}
-
-.container{
-    /*background: #08071d;*/
-    display: flex;
-    justify-content: center;
-}
-
-.container form{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-    border-radius: 15px;
-    background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(10px);
-    padding: 30px;
-}
-
-.container form h1{
-    color: #fff;
-    font-weight: 500;
-    text-align: center;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
+/************ Projects Css ************/
+.contact {
+    /* background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%); */
+    padding: 60px 0 200px 0;
+  }
+  .contact img {
+    width: 92%;
+  }
+  .contact h2{
+    color: #ffffff;
     text-shadow: 0 0 5px #00f7ff;
     font-weight: lighter;
     font-size: 2.5rem;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
-
-.container form input{
-    width: 300px;
-    height: 40px;
-    outline: none;
-    border: none;
-    font-size: 15px;
-    background: none;
-    border-bottom: 2px solid #fff;
-}
-
-.container form input::placeholder{
-    color: #ddd;
-}
-
-.container form #lastName,
-.container form #mobile{
-}
-
-.container form h4{
+  .contact form input,
+  .contact form textarea {
+    width: 100%;
+    background: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 20px;
     color: #fff;
-    font-weight: 300;
-    width: 600px;
-    height: 20px;
-}
-
-.container form textarea{
-    width: 75%;
-    margin: 10px;
-    background: none;
-    border: none;
-    border-bottom: 2px solid #fff;
+    margin: 0 0 8px 0;
+    padding: 18px 26px;
+    font-weight: 500;
+    font-size: 18px;
+    letter-spacing: 0.8px;
+    transition: 0.3s ease-in-out;
+  }
+  .contact form input:focus,
+  .contact form textarea:focus {
+    background: rgba(255, 255, 255, 1);
+    color: #121212;
+  }
+  .contact form input::placeholder,
+  .contact form textarea::placeholder {
+    font-size: 16px;
+    font-weight: 400;
     color: #fff;
-    font-weight: 200;
-    font-size: 15px;
-    outline: none;
-    min-height: 80px;
-    max-height: 80px;
-}
-
-.container form textarea::placeholder {
-    color: #ccc; /* Set the color you want for the placeholder text */
-}
-
-textarea::-webkit-scrollbar{
-}
-
-textarea::-webkit-scrollbar-thumb{
-    background-color: rgba(194, 194, 194, 0.713);
-}
-
-.container form #button{
-    border: none;
-    background: #fff;
-    border-radius: 5px;
-    font-weight: 600;
-    font-size: 20px;
-    color: #333;
-    width: 100px;
-    padding: 0;
-    margin-right: 500px;
-    transition: 0.3s;
-}
-
-.container form #button:hover{
-    opacity: 0.7;
-}
-
-.container form input .focused {
-    border-bottom-color:#cf88ff; /* Change this to the color you want */
-    border-bottom: 2px solid #cf88ff
-}
+  }
+  .contact form input:focus::placeholder,
+  .contact form textarea:focus::placeholder {
+    color: #121212;
+    opacity: 0.8;
+  }
+  .contact form button {
+    font-weight: 700;
+    color: #000;
+    background-color: #fff;
+    padding: 14px 48px;
+    font-size: 18px;
+    margin-top: 25px;
+    border-radius: 0;
+    position: relative;
+    transition: 0.3s ease-in-out;
+  }
+  .contact form button span {
+    z-index: 1;
+    position: relative;
+  }
+  .contact form button:hover {
+    color: #fff;
+  }
+  .contact form button::before {
+    content: "";
+    background: #121212;
+    width: 0;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    transition: 0.3s ease-in-out;
+  }
+  .contact form button:hover::before {
+    width: 100%;
+  }
+  
