--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -12,67 +12,98 @@ h2{
     margin-top: 10px;
 }
 
+h3{
+  color: #00f7ff;
+}
+
 .projectHeader{
     color: #f3f1f1;
     font-size: 2rem;
 }
-
-.card-container{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 30px;
-}
-
-.card{
-    width: 500px;
-    background-color: #f0f0f0;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-    margin: 20px;
-}
-
-.card-image {
-    width: 100%;
-    height: 300px; /* Adjust height as needed */
-    object-fit: cover; /* Ensures the image fits well without distortion */
-}
-
-.card:hover{
-    box-shadow: 0 0 10px #00f7ff;
-}
-
-.card-content{
-    padding: 16px;
-}
-
-.card-content p{
-    color: #666;
+/************ Projects Css ************/
+.project-section {
+    padding: 0 18%;
+    background-color: var(--primaryColor);
+  }
+  
+  .project p {
+    color: #8892b0;
+    font-size: 18px;
+    letter-spacing: 0.8px;
+    line-height: 1.5em;
+    margin: 14px auto 4rem auto;
+  }
+  
+  .featured-head {
+    color: var(--secondaryColor);
+    font-size: 14px;
+    letter-spacing: 0.8px;
+    line-height: 1.5em;
+    margin: 10px auto;
+  }
+  
+  .project-head {
+    color: var(--offwhite);
+  }
+  
+  .project-desc {
+    box-shadow: 0 10px 30px -15px rgba(2, 12, 27, 0.7);
+    transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+    position: relative;
+    z-index: 2;
+    padding: 25px;
+    border-radius: var(--borderRadius);
+    background-color: #112240;
+    color: #a8b2d1;
     font-size: 15px;
-    line-height: 1.3;
-}
+  }
+  
+  .project-tech {
+    margin: 0px 20px 5px 0px;
+    color: #a8b2d1;
+    font-size: 13px;
+  }
+  .project-card {
+    background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
+    padding: 3rem 3rem 0;
+    border-radius: 5px;
+    width: 30% !important;
+  }
+  .project-img {
+    position: relative;
+    background-color: var(--secondaryColor);
+  }
+  .background-image-right {
+    top: 20%;
+    position: absolute;
+    bottom: 0;
+    width: 35%;
+    right: 0;
+    z-index: -4;
+  }
+  .project-div {
+    margin: 6rem 0 12rem;
+  }
 
-.card-content .btn{
-    display: inline-block;
-    padding: 8px 16px;
-    background-color: #333;
-    text-decoration: none;
-    border-radius: 4px;
-    margin-top: 16px;
-    color: #fff;
-}
+  .project-div h3{
+    color:#ffffff;
+  }
 
-.card-content p{
-    min-height: 150px;
-    display: flex;
-    text-align: justify;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight:500;
-}
+  #aProject a svg {
+    margin: 10px;
+    color: #ff4949; /* Default color */
+    transition: transform 0.3s, color 0.3s;
+  }
 
-.card-content h3{
-    color: #2f2f2f;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 600;
+  #aProject a svg:hover {
+    transform: scale(1.1);
+    color: #ff4949; /* Hover color */
+  }
+
+  .bordered-div {
+    border: 2px solid #49f9ff; /* Border color and thickness */
+    display: inline-block; /* To fit the content */
+    border-radius: 5px; /* Rounded corners */
+    text-align: center; /* Center the content */
+    margin: 20px; /* Space outside the border */
 }
